<resources>
    <string name="app_name">PayTimer</string>
    <string name="action_settings">Settings</string>

    <string name="big_circle">Big Circle</string>
    <string name="start">Start</string>
    <string name="list_all_shifts">List all shifts</string>
    <string name="start_now">Start now</string>
    <string name="animated_start_symbol">Animated start symbol</string>
    <string name="stop_now">Stop now</string>
    <string name="start_shift_desc">Start shift</string>
    <string name="add_title">Add.</string>
    <string name="edit_title">Edit.</string>
    <string name="finish_btn">Finish</string>
    <string name="calendar_icon_desc">Calendar Icon</string>
    <string name="time_icon_desc">Time Icon</string>
    <string name="until_text">Until</string>
    <string name="anchor">Anchor</string>

    <string name="from_hour_to_hour">From hour to hour</string>
    <string name="stop_after_time_title">Will stop after %1$d hours.</string>
    <string name="shift_options_edit">Edit</string>
    <string name="shift_options_delete">Delete</string>
    <string name="delete_shift">Delete shift</string>
    <string name="delete_shift_text">Do you really want to delete this shift?</string>
    <string name="delete_shift_yes">Yes</string>
    <string name="delete_shift_no">No</string>
    <string name="shift_delete_undo">Undo</string>
    <string name="invalid_times">Invalid times.</string>
    <string name="location_marked_success">Location marked successfully!</string>
    <string name="Geofence_not_available">Geofences not available on this device.</string>
    <string name="start_your_shift_notification">Start your shift!</string>
    <string name="start_your_shift_text_notification">This is your daily reminded to start your shift!</string>
    <string name="start_notification_action">Start</string>
    <string name="shift_reminder_notification">Shift Reminders</string>
    <string name="shift_notification_reminders">Shift reminders</string>
    <string name="settings_notification_catgory">Notifications</string>
    <string name="settings_will_only_notify_once_a_day">Notify only once a day</string>
    <string name="settings_location_notification_text">Will remind you to start your shift when entering a specified location.</string>
    <string name="settings_pick_location">Pick location</string>
    <string name="settings_location_based_reminders">Location Based Reminders</string>
    <string name="settings_time_based_reminders">Time Based Reminders</string>
    <string name="settings_time_reminders_text">Will remind you to start your shift at a specified time of your choosing.</string>
    <string name="settings_pick_time">Pick time</string>
    <string name="settings_general_catagory">General</string>
    <string name="settings_stop_shift_after">Stop shift after certain time</string>
    <string name="settings_stop_shift_after_text">This will stop the shift after a certain time for you incase you forget.</string>
    <string name="settings_stop_shift_after_placeholder">Will stop after</string>
    <string name="settings_stop_shift_after_summry">After how much time should the shift stop ( in hours )</string>
    <string name="settings_export">Export</string>
    <string name="settings_export_desc">Export all shifts from file.</string>
    <string name="settings_import">Import</string>
    <string name="settings_import_desc">Import all shifts from file.</string>
    <string name="settings_delete_all">Delete all</string>
    <string name="settings_delete_all_desc">Delete all shifts.</string>
    <string name="settings_data_catagory">Data</string>
    <string name="invalid_number">Invalid number</string>
    <string name="settings_hourly_rate">Set Hourly rate</string>
    <string name="settings_hourly_rate_text">How much you make an hour</string>
    <string name="tip">Tip</string>
    <string name="settings_tips">Tips</string>
    <string name="settings_tips_desc">Save tips in your daily shifts.</string>
    <string name="hourly_pay">Hourly Pay</string>
    <string name="no_shifts">No shifts</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="time_notifications_catg">Time Notifications</string>
    <string name="time_notifications_daily_reminder_time">Daily reminder time</string>
    <string name="time_notifications_time_desc">Daily hour and minute that you will be reminder through a notification.</string>
    <string name="time_notifications_sunday">Sunday</string>
    <string name="time_notifications_monday">Monday</string>
    <string name="time_notifications_tuesday">Tuesday</string>
    <string name="time_notifications_wednesday">Wednesday</string>
    <string name="time_notifications_thursday">Thursday</string>
    <string name="time_notifications_friday">Friday</string>
    <string name="time_notifications_saturday">Saturday</string>
    <string name="title_activity_login">Account Settings</string>
    <string name="settings_auth">Account Settings</string>
    <string name="login_title">Login.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="register_btn">Register</string>
    <string name="login_success">Logged in successfully!</string>
    <string name="login_failed_user_doesnt_exists">User doesn\'t exists.</string>
    <string name="login_failed_user_already_exists">User already exists.</string>
    <string name="login_failed_password_short">Password is too short. Please use at least 6 characters</string>
    <string name="login_failed_password_incorrect">Password is incorrect.</string>
    <string name="profile_picture">Profile picture</string>
    <string name="select_profile_pictrue">Select a profile picture</string>
    <string name="image_uploaded_success">Image uploaded successfully!</string>
    <string name="image_upload_fail">Image upload failed!</string>
    <string name="settings_auth_summary">Login to enable active cloud sync</string>
    <string name="monthly_report_total_hours">%1$d hours</string>
    <string name="monthly_report_total_shifts">%1$d shifts</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="hours_title">hrs</string>
    <string name="avg_tip">Avg Tip</string>
    <string name="avg_shift">Avg Shift</string>
    <string name="settings_choose_currency">Choose your currency</string>
    <string name="settings_currency">Currency</string>
    <string name="shifts_options_paid">Mark Paid \\ Unpaid</string>
    <string name="delete_shifts">Delete shifts</string>
    <string name="delete_shifts_text">Do you really want to delete these shifts?</string>
    <string name="login_failed_email_empty">Email cannot be empty</string>
    <string name="login_failed_password_empty">Password cannot be empty</string>
    <string name="quick_shift_lengths">Quick Shift Lengths</string>
    <string name="quick_shift_length">%1$s hours</string>
    <string name="login_failed_invalid_email">Email address is badly formatted.</string>

</resources>
