<!--
  ~ Copyright (c) 2020. Erez Rotem, All rights reserved.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_general_catagory" app:iconSpaceReserved="false">
        <com.erezbiox1.paytimer.views.preferences.NumberPreference
            app:key="hourly_pay"
            app:title="@string/settings_hourly_rate"
            app:summary="@string/settings_hourly_rate_text"
            app:defaultValue="24"
            app:persistent="true"
            app:iconSpaceReserved="false"
            />

        <SwitchPreferenceCompat
            app:key="tips_enabled"
            app:title="@string/settings_tips"
            app:summary="@string/settings_tips_desc"
            android:defaultValue="true"
            app:persistent="true"
            app:iconSpaceReserved="false"/>

        <!--
        <SwitchPreferenceCompat
            app:key="will_stop_after_time"
            app:title="@string/settings_stop_shift_after"
            app:summary="@string/settings_stop_shift_after_text"
            android:defaultValue="false"
            app:persistent="true"
            />

        <SeekBarPreference
            android:dependency="will_stop_after_time"
            app:key="stop_after_time"
            app:title="@string/settings_stop_shift_after_placeholder"
            app:summary="@string/settings_stop_shift_after_summry"
            app:min="@integer/seek_bar_min"
            android:max="@integer/seek_bar_max"
            app:defaultValue="@integer/seek_bar_default"
            app:seekBarIncrement="1"
            app:updatesContinuously="true"
            app:persistent="true"/>
            -->
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_notification_catgory" app:iconSpaceReserved="false">

        <SwitchPreference
            app:key="notify_once_a_day"
            app:title="@string/settings_will_only_notify_once_a_day"
            app:defaultValue="true"
            app:persistent="true"
            app:iconSpaceReserved="false"/>

        <CheckBoxPreference
            app:key="location_notifications"
            app:title="@string/settings_location_based_reminders"
            app:summary="@string/settings_location_notification_text"
            app:defaultValue="false"
            app:persistent="true"
            app:iconSpaceReserved="false"/>

        <com.erezbiox1.paytimer.views.preferences.ButtonPreference
            app:dependency="location_notifications"
            app:key="pick_location"
            app:title="@string/settings_pick_location"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <CheckBoxPreference
            app:key="time_notifications_enabled"
            app:title="@string/settings_time_based_reminders"
            app:summary="@string/settings_time_reminders_text"
            app:defaultValue="false"
            app:persistent="true"
            app:iconSpaceReserved="false"/>

        <com.erezbiox1.paytimer.views.preferences.ButtonPreference
            app:dependency="time_notifications_enabled"
            app:key="pick_time"
            app:title="@string/settings_pick_time"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <!-- TODO: in the future.
    <PreferenceCategory app:title="@string/settings_data_catagory">

        <com.erezbiox1.paytimer.views.preferences.ButtonPreference
            app:key="export"
            app:title="@string/settings_export"
            app:summary="@string/settings_export_desc"
            app:defaultValue="true" />

        <com.erezbiox1.paytimer.views.preferences.ButtonPreference
            app:key="import"
            app:summary="@string/settings_import_desc"
            app:title="@string/settings_import"
            app:defaultValue="true" />

        <com.erezbiox1.paytimer.views.preferences.ButtonPreference
            app:key="delete"
            app:title="@string/settings_delete_all"
            app:summary="@string/settings_delete_all_desc"
            app:defaultValue="true" />

    </PreferenceCategory>
    -->

</PreferenceScreen>
