<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/edit_title"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/date_icon_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_date"
        app:srcCompat="@drawable/ic_calendar"
        android:contentDescription="@string/calendar_icon_desc" />

    <com.erezbiox1.paytimer.EditShift.Spinners.DateSpinner
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/date_icon_start"
        app:layout_constraintTop_toBottomOf="@+id/add_title" />

    <ImageView
        android:id="@+id/time_icon_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/start_date"
        app:layout_constraintTop_toTopOf="@+id/start_time"
        app:srcCompat="@drawable/ic_time"
        android:contentDescription="@string/time_icon_desc" />

    <com.erezbiox1.paytimer.EditShift.Spinners.TimeSpinner
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/time_icon_start"
        app:layout_constraintTop_toBottomOf="@+id/add_title" />

    <!--NOD$R-->

    <ImageView
        android:id="@+id/date_icon_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/calendar_icon_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/end_date"
        app:srcCompat="@drawable/ic_calendar" />

    <com.erezbiox1.paytimer.EditShift.Spinners.DateSpinner
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/date_icon_end"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/time_icon_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/time_icon_desc"
        app:layout_constraintStart_toEndOf="@+id/end_date"
        app:layout_constraintTop_toTopOf="@+id/end_time"
        app:srcCompat="@drawable/ic_time" />

    <com.erezbiox1.paytimer.EditShift.Spinners.TimeSpinner
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/time_icon_end"
        app:layout_constraintTop_toTopOf="@+id/end_date" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/until_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_time"
        app:layout_constraintStart_toStartOf="@+id/date_icon_start"
        app:layout_constraintTop_toBottomOf="@+id/start_date" />


</androidx.constraintlayout.widget.ConstraintLayout>
